Feature registerAnnualPlansAsEventsForState
AnnualPlan을 Event 달력에서도 볼수있게 EventDto로 변환